--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.65.5",
+    "@react-three/fiber": "^8.12.2",
     "@types/howler": "^2.2.7",
     "@types/node": "18.15.12",
     "@types/react": "^18.0.37",
     "@types/react-dom": "18.0.11",
+    "@types/three": "^0.150.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -23,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.1",
+    "three": "^0.151.3",
     "typescript": "5.0.4"
   }
 }
